--- a/notebooks/uc_clinica_base.ipynb
+++ b/notebooks/uc_clinica_base.ipynb
@@ -48,9 +48,10 @@
    "outputs": [],
    "source": [
     "spark.sql(f\"\"\"\n",
-    "        CREATE CATALOG IF NOT EXISTS catalog_name\n",
+    "        CREATE CATALOG IF NOT EXISTS {catalog_name}\n",
     "        MANAGED LOCATION '{path_base}/{catalog_name}'\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
     "print(f\"CATALOG: {catalog_name} creado exitosamente.\")"
    ]
