--- a/notebooks/uc_clinica01_extraccion_bronze_databricks.ipynb
+++ b/notebooks/uc_clinica01_extraccion_bronze_databricks.ipynb
@@ -136,9 +136,9 @@
    "outputs": [],
    "source": [
     "# Parámetros de conexión\n",
-    "url_conexion = dbutils.secrets.get(\"scope-dev\", \"secret-sql-url\")\n",
-    "usuario = dbutils.secrets.get(\"scope-dev\", \"secret-sql-user\")\n",
-    "password = dbutils.secrets.get(\"scope-dev\", \"secret-sql-password\")\n",
+    "url_conexion = dbutils.secrets.get(\"scope-dev\", \"secret-sql-clinica-url\")\n",
+    "usuario = dbutils.secrets.get(\"scope-dev\", \"secret-sql-clinica-user\")\n",
+    "password = dbutils.secrets.get(\"scope-dev\", \"secret-sql-clinica-password\")\n",
     "fecha_carga = \"2025-04-14\"\n",
     "#properties = {\"user\": \"admin01juls\", \"password\": \"287719Julius@12\", \"driver\": \"com.microsoft.sqlserver.jdbc.SQLServerDriver\"}\n",
     "\n",
