--- a/notebooks/uc_clinica_base.ipynb
+++ b/notebooks/uc_clinica_base.ipynb
@@ -24,9 +24,9 @@
     "path_base = f\"abfss://{container_name}@{account_name}.dfs.core.windows.net\"\n",
     "\n",
     "catalog_name = \"desarrollo\"\n",
-    "schema_bronze = \"bronze_clinica\"\n",
-    "schema_silver = \"silver_clinica\"\n",
-    "schema_gold = \"gold_clinica\""
+    "schema_bronze = \"bronze_ventas\"\n",
+    "schema_silver = \"silver_ventas\"\n",
+    "schema_gold = \"gold_ventas\""
    ]
   },
   {
