--- a/notebooks/uc_ clinica02_transformacion_silver_databricks.ipynb
+++ b/notebooks/uc_ clinica02_transformacion_silver_databricks.ipynb
@@ -318,6 +318,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "USE CATALOG desarrollo;\n",
+    "\n",
     "SHOW DATABASES;"
    ]
   },
