--- a/notebooks/uc_clinica01_extraccion_bronze_databricks.ipynb
+++ b/notebooks/uc_clinica01_extraccion_bronze_databricks.ipynb
@@ -367,6 +367,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "USE CATALOG desarrollo;\n",
+    "\n",
     "SHOW DATABASES;"
    ]
   },
@@ -456,7 +458,7 @@
     "             .whenMatchedUpdate(set=set_expr)\n",
     "             .whenNotMatchedInsert(values=vals_expr)\n",
     "             .execute())\n",
-    "    print(f\"✅ MERGE completado para {full_name}\")\n"
+    "    print(f\"✅ MERGE completado para {full_name}\")"
    ]
   },
   {
