--- a/notebooks/uc_ventas01_extraccion_bronze_databricks.ipynb
+++ b/notebooks/uc_ventas01_extraccion_bronze_databricks.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5772ba27-ef3e-44a0-a2ce-64579c5cd544",
      "showTitle": false,
@@ -23,7 +26,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0bbac2c4-47dd-49a7-bba0-c35fce7acfcf",
      "showTitle": false,
@@ -713,6 +719,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "USE CATALOG desarrollo;\n",
+    "\n",
     "SHOW DATABASES;"
    ]
   },
