--- a/notebooks/uc_clinica03_modelado_gold_databricks.ipynb
+++ b/notebooks/uc_clinica03_modelado_gold_databricks.ipynb
@@ -443,6 +443,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "USE CATALOG desarrollo;\n",
+    "\n",
     "SHOW DATABASES;"
    ]
   },
