--- a/notebooks/uc_catalog_schema_base.ipynb
+++ b/notebooks/uc_catalog_schema_base.ipynb
@@ -148,7 +148,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "uc_clinica_base",
+   "notebookName": "uc_catalog_schema_base",
    "widgets": {}
   },
   "language_info": {
